# pdf-to-searchabletext-converter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  scannedpdf_to_searchabletxt.py
pdf2text/: __init__.py  cli.py  converter.py  utils.py
tests/: test_cli.py  test_converter_unit.py  test_new_features.py  test_smoke.py  test_utils.py
